test_suite5/ALAN/test_suite/alan-2022-examples/failing/000350_mutation.alan
source TX5Q begin - call t() end
